--- a/css/components/sous-contenairs.css
+++ b/css/components/sous-contenairs.css
@@ -1,5 +1,25 @@
+.photo{
+    width: 100%;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin: 20px 0 0px 0;
+    padding-top: 20px ;
+
+
+}
+
+
+
+
+
 .titre-parcours{
-height: auto ;
+height: 300px ;
+margin-top: 30px;
+
+
 
 
 }
@@ -9,42 +29,39 @@ height: auto ;
     height: 5vh;
     background-color: #317AC1 ;
     
-}.Parcours p{
-    text-align: center;
-    font-size: 20px;
-    font-weight: bold;
+    
 }
 
 .titre-passions{
-    height: auto ;
+    height: 300px ;
+    margin-top: 0px;
     
-    
-    }
-    
-    .passions{
-        width: 100%;
-        height: 5vh;
-        background-color: #317AC1 ;
-        
-    }.passions p{
-        text-align: center;
-        font-size: 20px;
-        font-weight: bold;
-    }
+   
 
-    .titre-comportement{
-        height: auto ;
+ 
+   
+    
+}
+
+.passions{
+     width: 100%;
+     height: 5vh;
+     background-color: #317AC1 
+
+}
+
+.titre-comportement{
+    height: 300px ;
+    margin-top: 0px;
+   
+ 
+    
+}
         
-        
-        }
-        
-        .comportement{
-            width: 100%;
-            height: 5vh;
-            background-color: #317AC1 ;
+.comportement{
+    width: 100%;
+    height: 5vh;
+    background-color: #317AC1 ;
             
-        }.comportement p{
-            text-align: center;
-            font-size: 20px;
-            font-weight: bold;
-        }
+}
+
