--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,8 @@
 @import url(components/navbar.css);
 @import url(components/sous-contenairs.css);
 @import url(components/texts.css);
+@import url(components/florian-style.css);
+
 
 
 
