--- a/florian-style.css
+++ b/florian-style.css
@@ -1,11 +1,8 @@
 
-body, h1, h2, h3, p, ul, li, img {
-    margin: 0;
-    padding: 0;
-}
 
 
-body {
+
+.body {
     font-family: 'Arial', sans-serif;
     color: #333;
 }
@@ -18,7 +15,7 @@ header {
 }
 
 
-nav ul {
+.ul {
     list-style: none;
     display: flex;
     justify-content: center;
@@ -50,7 +47,7 @@ nav a:hover {
 }
 
 /* Styles spécifiques à la classe "parcours" */
-.parcours {
+#parcours {
     background-image: url('about-bg.jpg');
     color: #fff;
     background-color: rgba(0, 0, 0, 0.7);
@@ -69,12 +66,12 @@ nav a:hover {
     border-radius: 5px;
 }
 
-.parcours .parcours-title {
+#parcours .parcours-title {
     font-size: 20px;
     margin-top: 10px;
 }
 
-.parcours .parcours-description {
+#parcours .parcours-description {
     font-size: 16px;
     margin-top: 10px;
 }
