--- a/css/components/florian-style.css
+++ b/css/components/florian-style.css
@@ -1,22 +1,16 @@
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
+.body {
     display: flex;
 }
 
-nav {
-    background-color: #BA55D3;
-    width: 20%;
-    padding: 20px;
+.nav {
+    width: 300px;
     height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center; 
-    justify-content: flex-start; 
+    position: sticky;
+    top: 0;
+    background-color: #BA55D3;
 }
 
-nav h2 {
+/* nav h2 {
     color: white; 
 }
 
@@ -29,30 +23,24 @@ nav h2 {
 
 nav li {
     margin-right: 20px;
-}
+} */
 
-nav a {
-    display: block;
-    color: white;
-    text-decoration: none;
-    padding: 10px;
-    font-size: 20px;
-}
 
-nav a:not(:last-child) {
+
+/* nav a:not(:last-child) {
     margin-bottom: 10px; 
-}
+} */
 
 .content {
-    width: 80%;
-    padding: 20px;
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+   
 }
 
 .profile {
-    width: 70%;
+    width: 70px;
     margin-bottom: 20px;
     text-align: center;
 }
