--- a/css/components/texts.css
+++ b/css/components/texts.css
@@ -1,7 +1,7 @@
 .photo p {
     text-align: center;
     margin-top: 20px;
-    font-family: 'Times New Roman', Times, serif;
+    /* font-family: 'Times New Roman', Times, serif; */
     font-size: 20px;
 }
 
