--- a/css/components/florian-style.css
+++ b/css/components/florian-style.css
@@ -58,7 +58,7 @@ nav li {
 
 .name-section {
     background-color: violet;
-    color: white;
+    color: black;
     padding: 10px;
     text-align: center;
 }
