--- a/css/components/navbar.css
+++ b/css/components/navbar.css
@@ -53,12 +53,7 @@ margin: 70px 10px 0px 30px;
     color: rgb(161, 208, 247);
 }
 
-.description-part nav{
-    width: 100%;
 
-    
-    
-}
 
 .name  {
    list-style: none;
@@ -95,3 +90,114 @@ color: black;
     font-size: 20px;
 
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+.NavBar1{
+    width: 300px;
+    height: 100vh;
+    position: sticky;
+    background-color: #317AC1;
+    top: 0;
+
+}
+
+.title1 p {
+  margin-top: 25px;
+  margin-bottom: 20px;
+  text-align: center;
+  color: black;
+  font-size: 23px;
+  font-weight:bold ;
+  text-decoration: underline;
+  
+}
+
+.nav-options1{
+width: 100%;
+
+height: 100%;
+margin: 90px 30px 0px 50px;
+
+
+
+}
+
+
+.options1 {
+    margin: 60px 0 60px 0;
+  
+}
+
+.options1 h5 {
+    color: black;
+    text-decoration: underline;
+    font-size: 20px;
+
+}
+.list-options1{
+    margin-top: 8px;
+    margin-left: 30px;
+}
+
+.list-options1 li {
+    list-style-type: none;
+    text-decoration: none;
+    color: black;
+}
+.list-options1 a {
+    color: black;
+    text-decoration: none;
+    font-size: 17px;
+}
+
+.li-opt1 a {
+    color: rgb(254, 148, 249);
+}
+
+
+
+.name1  {
+   list-style: none;
+
+}
+
+
+
+.nav-name1{
+    width: 100%;
+    height: 5vh;
+    border: 2px solid rgb(16, 16, 16, 5);
+    padding-top: 5px;
+}
+
+.nav-name1 ul {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 40px;
+    padding-left: 32px;
+}
+
+.brunic1{
+    color: purple;
+    font-size: 20px;
+   
+}
+
+.florian1{
+    color: blue;
+    font-size: 20px;
+
+}
+
