--- a/css/components/florian-style.css
+++ b/css/components/florian-style.css
@@ -46,8 +46,15 @@ nav li {
 }
 
 .profile img {
-    max-width: 100%;
-    border-radius: 50%;
+    width: 100%;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin: 20px 0 0px 0;
+    padding-top: 20px ;
+
 }
 
 .name-age {
