--- a/css/components/florian-style.css
+++ b/css/components/florian-style.css
@@ -33,7 +33,9 @@
 }
 
 .profile img {
-    width: 100%;
+    width: 70px;
+    margin-bottom: 20px;
+    text-align: center;
     height: auto;
     display: flex;
     justify-content: center;
@@ -41,7 +43,6 @@
     flex-direction: column;
     margin: 20px 0 0px 0;
     padding-top: 20px ;
-
 }
 
 .name-age {
